# probe-cov-sandbox

./: Cargo.toml  README.md
src/: main.rs
test-project/: Cargo.toml  Embed.toml
test-project/examples/: simple.rs
test-project/tests/: gpio-input-floating.rs
