[package]
name = "probe-cov-sandbox"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-tarpaulin = { git = "https://github.com/xd009642/tarpaulin", branch="patch/testing-patches" }
probe-rs = "0.11.0"
